# caselaw-repo

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.spaces  Makefile  README.md  docker-compose.yml  install-mac.command  install-windows.bat
.github/workflows/: ci.yml  daily_delta.yml  daily_update.yml  deploy_spaces.yml  historical_import.yml  ingest.yml  sync_sqlite.yml  (+4 more)
backend/: Dockerfile  mcp_server.py  pyproject.toml  requirements-dev.txt  requirements-local.txt  requirements.txt
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
local_app/: pyproject.toml  requirements.txt
local_app/caselaw_local/: cli.py  config.py  db.py  download.py  fuzzy.py  manifest.py  query_parser.py  search.py  server.py  updater.py  zstdutil.py
local_app/caselaw_local/static/: app.js  styles.css
local_app/caselaw_local/templates/: dashboard.html  index.html
mcp_server/: README.md  requirements.txt  server.py
pipeline/: pyproject.toml  rebuild_full_snapshot.py  requirements.txt
pipeline/caselaw_pipeline/: cli.py
pipeline/caselaw_pipeline/artifacts/: manifest.py  meta.py  parquet_io.py  sqlite_db.py
pipeline/caselaw_pipeline/export/: reader.py
pipeline/caselaw_pipeline/publish/: hf.py
pipeline/caselaw_pipeline/util/: hashing.py  loggingutil.py  timeutil.py  zstdutil.py
scripts/: run_scrapers_and_export.sh
tests/: conftest.py  test_fuzzy.py  test_local_db.py  test_local_manifest.py  test_local_search.py  test_mcp_server.py  test_pipeline_manifest.py  test_pipeline_sqlite.py  test_pipeline_util.py  test_query_parser.py
(+119 files in other folders)
