[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caselaw-local"
version = "0.1.0"
description = "Local offline Swiss caselaw search app"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["caselaw_local*"]
